[tool.poetry]
name = "sport-tv-extractor"
version = "0.1.0"
description = ""
authors = ["Vladislav Shufinskiy <hollywood.90210@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
